# ChemLab

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ChemLab  Makefile  README.md  chemlab.sublime-project  cmake_install.cmake
assets/: W20_stable_clathrate_cages_TTM21F_first_200.xyz  test_xyz_file.xyz  traj_short.xyz
assets/shaders/: dashed_line.vs  dashed_lined.fs  lighting.fs
src/: camera.h  chemlab.h  main.cpp
src/compute/: compute.h
src/core/: change_state.h  frame.h  init.h  input.h  types.h
src/render/: animation_mode.h  build_mode.h  camera.h  draw.h  drawing_window.h  edit_mode.h  globals.h  render_frame.h  ui.h  view_mode.h
src/utils/: atomic_data.h  debug.h  export.h  geometry.h  interact.h  load_and_create.h  math_utils.h  molecule_tools.h  monitor_file.h  raymath_glm_conversions.h
